po: update po/sr_RS@latin/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/event.po
+++ b/po/sr_RS@latin/event.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-27 12:05+0000\n"
+"PO-Revision-Date: 2016-12-18 18:47+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -87,7 +87,7 @@ msgstr "Učesnik je test?"
 
 #: CRM/Event/BAO/Query.php
 msgid "Participant is Pay Later?"
-msgstr ""
+msgstr "Učesnik naknadno plaća?"
 
 #: CRM/Event/Cart/BAO/Cart.php
 msgid "There was an error creating an event cart"
@@ -2797,7 +2797,7 @@ msgstr ""
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid "Your registration has been submitted."
-msgstr ""
+msgstr "Vaša registracija je podneta."
 
 #: templates/CRM/Event/Form/Registration/ThankYou.tpl
 #: xml/templates/message_templates/event_offline_receipt_html.tpl
@@ -2811,7 +2811,7 @@ msgstr ""
 
 #: templates/CRM/Event/Form/Registration/ThankYou.tpl
 msgid "An email with event details has been sent to %1."
-msgstr ""
+msgstr "Email sa detaljima o događaju je poslat ka %1."
 
 #: templates/CRM/Event/Form/Registration/ThankYou.tpl
 msgid ""
@@ -2833,7 +2833,7 @@ msgstr ""
 
 #: templates/CRM/Event/Form/Registration/ThankYou.tpl
 msgid "A registration confirmation email has also been sent to %1"
-msgstr ""
+msgstr "Email sa potvrdom registracije je takođe poslat ka %1"
 
 #: templates/CRM/Event/Form/Registration/ThankYou.tpl
 msgid "Tax Total"
@@ -2849,11 +2849,11 @@ msgstr ""
 
 #: templates/CRM/Event/Form/Search/Common.tpl
 msgid "Event Dates"
-msgstr ""
+msgstr "Datum događaja"
 
 #: templates/CRM/Event/Form/Search/EmptyResults.tpl
 msgid "if you are searching by participant name, check your spelling"
-msgstr ""
+msgstr "Ako pretražujete po imenu učesnika, proverite vaš unos"
 
 #: templates/CRM/Event/Form/Search/Results.hlp
 msgid "Actual Participant Count"
@@ -2875,15 +2875,15 @@ msgstr ""
 
 #: templates/CRM/Event/Form/SearchEvent.tpl
 msgid "Complete OR partial Event name."
-msgstr ""
+msgstr "Kompletno ILI delimično ime događaja"
 
 #: templates/CRM/Event/Form/Selector.tpl
 msgid "List participants for this event (all statuses)"
-msgstr ""
+msgstr "Lista učesnika za ovaj događaj (svi statusi)"
 
 #: templates/CRM/Event/Form/Selector.tpl
 msgid "participants"
-msgstr ""
+msgstr "učesnici"
 
 #: templates/CRM/Event/Form/Selector.tpl
 #: templates/CRM/Event/Form/Task/Print.tpl
@@ -2892,11 +2892,11 @@ msgstr ""
 
 #: templates/CRM/Event/Form/Selector.tpl
 msgid "Find more event participants"
-msgstr ""
+msgstr "Nađi još učesnika događaja"
 
 #: templates/CRM/Event/Form/Selector.tpl
 msgid "View all events for this contact"
-msgstr ""
+msgstr "Vidi sve događaje za ovaj kontakt"
 
 #: templates/CRM/Event/Form/Task/Batch.tpl
 msgid ""
@@ -2975,7 +2975,7 @@ msgstr ""
 
 #: templates/CRM/Event/Form/Task/Print.tpl
 msgid "Event Date"
-msgstr ""
+msgstr "Datum događaja"
 
 #: templates/CRM/Event/Form/Task/SaveSearch.tpl
 msgid ""
@@ -2989,7 +2989,7 @@ msgstr ""
 
 #: templates/CRM/Event/Import/Form/DataSource.hlp
 msgid "Required Participant Data"
-msgstr ""
+msgstr "Neophodni podaci o učesniku"
 
 #: templates/CRM/Event/Import/Form/DataSource.hlp
 msgid "Participant import data MUST include the following columns:"
@@ -3201,7 +3201,7 @@ msgstr ""
 
 #: templates/CRM/Event/Page/DashBoard.hlp
 msgid "Event Dashboard"
-msgstr ""
+msgstr "Kontrolna tabla događaja"
 
 #: templates/CRM/Event/Page/DashBoard.hlp
 msgid ""
@@ -3253,7 +3253,7 @@ msgstr ""
 
 #: templates/CRM/Event/Page/DashBoard.tpl
 msgid "Repeating Event"
-msgstr ""
+msgstr "Događaj se ponavlja"
 
 #: templates/CRM/Event/Page/DashBoard.tpl
 msgid "Child"
@@ -3261,7 +3261,7 @@ msgstr ""
 
 #: templates/CRM/Event/Page/DashBoard.tpl
 msgid "List %1 participants"
-msgstr ""
+msgstr "Lista %1 učesnika"
 
 #: templates/CRM/Event/Page/DashBoard.tpl
 msgid "Not&nbsp;Counted"
@@ -3277,11 +3277,11 @@ msgstr ""
 
 #: templates/CRM/Event/Page/DashBoard.tpl
 msgid "(max %1)"
-msgstr ""
+msgstr "(max %1)"
 
 #: templates/CRM/Event/Page/DashBoard.tpl
 msgid "Map event location"
-msgstr ""
+msgstr "Mapiraj lokaciju događaja"
 
 #: templates/CRM/Event/Page/DashBoard.tpl
 msgid "Browse more events"
@@ -3289,7 +3289,7 @@ msgstr ""
 
 #: templates/CRM/Event/Page/DashBoard.tpl
 msgid "There are no active Events to display."
-msgstr ""
+msgstr "Nema aktivnih događaja za prikaz."
 
 #: templates/CRM/Event/Page/DashBoard.tpl
 msgid "You can <a href=\"%1\">Create a New Event</a> now."
@@ -3301,11 +3301,11 @@ msgstr ""
 
 #: templates/CRM/Event/Page/EventInfo.tpl
 msgid "Registration is closed for this event"
-msgstr ""
+msgstr "Registracija za ovaj događaj je zatvorena"
 
 #: templates/CRM/Event/Page/EventInfo.tpl
 msgid "Configure this event."
-msgstr ""
+msgstr "Konfiguracija ovog događaja"
 
 #: templates/CRM/Event/Page/EventInfo.tpl
 msgid "Participant listing links."
@@ -3321,19 +3321,19 @@ msgstr ""
 
 #: templates/CRM/Event/Page/EventInfo.tpl
 msgid "Show large map"
-msgstr ""
+msgstr "Prikaži veliku mapu"
 
 #: templates/CRM/Event/Page/ICalendar.tpl
 msgid "Category"
-msgstr ""
+msgstr "Kategorija"
 
 #: templates/CRM/Event/Page/ICalendar.tpl
 msgid "details..."
-msgstr ""
+msgstr "detalji..."
 
 #: templates/CRM/Event/Page/ICalendar.tpl
 msgid "(not available)"
-msgstr ""
+msgstr "(nije dostupno)"
 
 #: templates/CRM/Event/Page/ManageEvent.hlp
 msgid "ICalendar Downloads and Feeds"
@@ -3395,7 +3395,7 @@ msgstr ""
 
 #: templates/CRM/Event/Page/ManageEvent.hlp
 msgid "HTML Listing"
-msgstr ""
+msgstr "HTML Listing"
 
 #: templates/CRM/Event/Page/ManageEvent.hlp
 msgid ""
@@ -3430,11 +3430,11 @@ msgstr ""
 
 #: templates/CRM/Event/Page/ManageEvent.tpl
 msgid "Add Event"
-msgstr ""
+msgstr "Dodaj događaj"
 
 #: templates/CRM/Event/Page/ManageEvent.tpl
 msgid "Registration (Test-drive)"
-msgstr ""
+msgstr "Registracija (Test)"
 
 #: templates/CRM/Event/Page/ManageEvent.tpl
 msgid "Registration (Live)"
@@ -3466,7 +3466,7 @@ msgstr ""
 #: templates/CRM/Event/Page/ParticipantListing/NameAndEmail.tpl
 #: templates/CRM/Event/Page/ParticipantListing/NameStatusAndDate.tpl
 msgid "There are currently no participants registered for this event."
-msgstr ""
+msgstr "Trenutno nema učesnika registrovanih za ovaj događaj."
 
 #: templates/CRM/Event/Page/Tab.tpl
 msgid "This page lists all event registrations for %1 since inception."
@@ -3486,7 +3486,7 @@ msgstr ""
 
 #: templates/CRM/Event/Page/Tab.tpl
 msgid "Add Event Registration"
-msgstr ""
+msgstr "Dodaj registraciju za događaj"
 
 #: templates/CRM/Event/Page/Tab.tpl
 msgid "Submit Credit Card Event Registration"
@@ -3536,7 +3536,7 @@ msgstr ""
 #: xml/templates/message_templates/participant_expired_html.tpl
 #: xml/templates/message_templates/participant_expired_text.tpl
 msgid "Event Contacts:"
-msgstr ""
+msgstr "Kontakti za događaj:"
 
 #: xml/templates/message_templates/event_offline_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_html.tpl
@@ -3548,11 +3548,11 @@ msgstr ""
 #: xml/templates/message_templates/event_offline_receipt_text.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid "Participant Information - Participant %1"
-msgstr ""
+msgstr "Informacije o učesniku - Učesnik %1"
 
 #: xml/templates/message_templates/event_offline_receipt_subject.tpl
 msgid "Event Confirmation"
-msgstr ""
+msgstr "Potvrda za događaj"
 
 #: xml/templates/message_templates/event_offline_receipt_text.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
@@ -3565,16 +3565,16 @@ msgstr ""
 #: xml/templates/message_templates/participant_confirm_html.tpl
 #: xml/templates/message_templates/participant_confirm_text.tpl
 msgid "Your schedule:"
-msgstr ""
+msgstr "Vaš raspored:"
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 msgid "You were registered by:"
-msgstr ""
+msgstr "Registrovao(la) vas je:"
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid "Participant Total"
-msgstr ""
+msgstr "Ukupno učesnika"
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 msgid " Amount Before Tax: "
@@ -3591,20 +3591,20 @@ msgstr ""
 #: xml/templates/message_templates/participant_expired_html.tpl
 #: xml/templates/message_templates/participant_expired_text.tpl
 msgid "Please contact us at %1 or send email to %2 if you have questions."
-msgstr ""
+msgstr "Kontaktirajte nas na %1 ili pošaljite email %2 ukoliko imate pitanja."
 
 #: xml/templates/message_templates/participant_cancelled_subject.tpl
 msgid "Event Registration Cancelled for %1"
-msgstr ""
+msgstr "Reistracija za događaj %1 otkazana"
 
 #: xml/templates/message_templates/participant_confirm_html.tpl
 #: xml/templates/message_templates/participant_confirm_text.tpl
 msgid "Confirm Your Registration"
-msgstr ""
+msgstr "Potvrdite vašu registraciju"
 
 #: xml/templates/message_templates/participant_confirm_subject.tpl
 msgid "Confirm your registration for %1"
-msgstr ""
+msgstr "Potvrdite registraciju za %1"
 
 #: xml/templates/message_templates/participant_expired_html.tpl
 #: xml/templates/message_templates/participant_expired_text.tpl
@@ -3626,7 +3626,7 @@ msgstr ""
 
 #: CRM/Event/BAO/Query.php
 msgid "Participant is %1"
-msgstr ""
+msgstr "Učesnik je %1"
 
 #: CRM/Event/BAO/Query.php
 msgid ""
@@ -3645,7 +3645,7 @@ msgstr ""
 
 #: CRM/Event/Cart/DAO/Cart.php
 msgid "Complete?"
-msgstr ""
+msgstr "Završeno?"
 
 #: CRM/Event/Cart/DAO/EventInCart.php
 msgid "Event In Cart"
@@ -3673,7 +3673,7 @@ msgstr ""
 
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "Maximum additional participants"
-msgstr ""
+msgstr "Maksimum dodatnih učesnika"
 
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "Allow self-service cancellation or transfer?"
@@ -3688,21 +3688,21 @@ msgid ""
 "Sorry, it looks like this event only has %2 spaces available, and you are "
 "trying to register %1 participants. Please change your selections "
 "accordingly."
-msgstr ""
+msgstr "Izvinite, ovaj događaj ima još samo %2 slobodnih mesta, a vi pokušavate da registrujete %1 učesnika. Molimo izmenite vašu selekciju u skladu sa ovom informacijom."
 
 #: CRM/Event/Form/Registration/Register.php
 msgid ""
 "It looks like you are already registered for this event. If you want to "
 "change your registration, or you feel that you've received this message in "
 "error, please contact the site administrator."
-msgstr ""
+msgstr "Izgleda da ste već registrovani za ovaj događaj. Ukoliko želite da promenite vašu regsitraciju ili mislite da ste greškom dobili ovu poruku, molimo kontaktirajte administratora."
 
 #: CRM/Event/Form/Registration/Register.php
 msgid ""
 "It looks like this participant is already registered for this event. If you "
 "want to change your registration, or you feel that you've received this "
 "message in error, please contact the site administrator."
-msgstr ""
+msgstr "Izgleda da je ovaj učesnik već registrovan za ovaj događaj. Ukoliko želite da promenite vašu regsitraciju ili mislite da ste greškom dobili ovu poruku, molimo kontaktirajte administratora."
 
 #: CRM/Event/Form/Registration.php
 msgid "Sorry, currently only a single space is available for this option."
@@ -3715,11 +3715,11 @@ msgstr ""
 #: CRM/Event/Form/SelfSvcTransfer.php CRM/Event/Form/SelfSvcUpdate.php
 msgid ""
 "You do not have sufficient permission to transfer/cancel this participant."
-msgstr ""
+msgstr "Nemate dozvolu za transfer/otkazivanje ovog učesnika."
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid "To Email"
-msgstr ""
+msgstr "Na email"
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid "To Last Name"
@@ -3731,48 +3731,48 @@ msgstr ""
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid "Transfer Registration"
-msgstr ""
+msgstr "Transfer registracije"
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid "Enter valid email address."
-msgstr ""
+msgstr "Unesite važeću email adresu."
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid " is already registered for this event"
-msgstr ""
+msgstr "je već registrovan(a) za ovaj događaj"
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid "Registration Transferred"
-msgstr ""
+msgstr "Registracija transferovana"
 
 #: CRM/Event/Form/SelfSvcTransfer.php CRM/Event/Form/SelfSvcUpdate.php
 msgid "A cancellation email has been sent to %1."
-msgstr ""
+msgstr "Email o otkazivanju je poslat ka %1."
 
 #: CRM/Event/Form/SelfSvcTransfer.php CRM/Event/Form/SelfSvcUpdate.php
 msgid "Thanks"
-msgstr ""
+msgstr "Hvala"
 
 #: CRM/Event/Form/SelfSvcUpdate.php
 msgid ""
 "Registration for this event cannot be cancelled or transferred once the "
 "event has begun. Contact the event organizer if you have questions."
-msgstr ""
+msgstr "Registracija za ovaj događaj ne može biti otkazana niti transferovana kada je događaj u toku. Kontaktirajte organizatora događaja ako imate pitanja."
 
 #: CRM/Event/Form/SelfSvcUpdate.php
 msgid ""
 "Registration for this event cannot be cancelled or transferred less than %1 "
 "hours prior to the event's start time. Contact the event organizer if you "
 "have questions."
-msgstr ""
+msgstr "Registracija za ovaj događaj ne može biti otkazana niti transferovana ukoliko je ostalo manje od %1 sati do početka događaja. Kontaktirajte organizatora događaja ako imate pitanja."
 
 #: CRM/Event/Form/SelfSvcUpdate.php
 msgid "Transfer or Cancel Registration"
-msgstr ""
+msgstr "Transfer i otkazivanje registracije"
 
 #: CRM/Event/Form/SelfSvcUpdate.php
 msgid "Transfer"
-msgstr ""
+msgstr "Transfer"
 
 #: CRM/Event/Form/SelfSvcUpdate.php
 msgid "Submit"
@@ -3780,12 +3780,12 @@ msgstr ""
 
 #: CRM/Event/Form/SelfSvcUpdate.php
 msgid "Please select Transfer OR Cancel action."
-msgstr ""
+msgstr "Izaberite opciju transfer ILI otkazivanje."
 
 #: CRM/Event/Form/Task/Batch.php CRM/Event/Form/Task/PickProfile.php
 #: CRM/Event/Task.php
 msgid "Update multiple participants"
-msgstr ""
+msgstr "Ažuriraj više učesnika"
 
 #: CRM/Event/Form/Task/Batch.php
 msgid ""
@@ -3809,15 +3809,15 @@ msgstr ""
 
 #: CRM/Event/Task.php
 msgid "Delete participants from event"
-msgstr ""
+msgstr "Obriši učesnike iz događaja"
 
 #: CRM/Event/Task.php
 msgid "Export participants"
-msgstr ""
+msgstr "Eksport učesnika"
 
 #: CRM/Event/Task.php
 msgid "Cancel registration"
-msgstr ""
+msgstr "Otkaži registraciju"
 
 #: CRM/Event/Task.php
 msgid "Participant status - change (emails sent)"
@@ -3833,11 +3833,11 @@ msgstr ""
 
 #: CRM/Event/Tokens.php
 msgid "Event Contact (Email)"
-msgstr ""
+msgstr "Kontakt za događaj (Email)"
 
 #: CRM/Event/Tokens.php
 msgid "Event Contact (Phone)"
-msgstr ""
+msgstr "Kontakt za događaj (Telefon)"
 
 #: templates/CRM/Event/Form/EventFees.tpl
 msgid ""
@@ -3848,7 +3848,7 @@ msgstr ""
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid "Maximum Additional Participants"
-msgstr ""
+msgstr "Maksimum dodatnih učesnika"
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid ""
@@ -3905,7 +3905,7 @@ msgstr ""
 
 #: templates/CRM/Event/Form/ParticipantView.tpl
 msgid "View this Participant"
-msgstr ""
+msgstr "Pogledaj ovog učesnika"
 
 #: templates/CRM/Event/Form/SelfSvcTransfer.tpl
 msgid "Current<br />Participant"
@@ -3921,7 +3921,7 @@ msgstr ""
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid "Thank you for your participation."
-msgstr ""
+msgstr "Hvala na učešću"
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 msgid ""
@@ -3983,7 +3983,7 @@ msgstr ""
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 #: xml/templates/message_templates/participant_confirm_text.tpl
 msgid "Transfer or cancel your registration:"
-msgstr ""
+msgstr "Transfer i otkazivanje registracije:"
 
 #: xml/templates/message_templates/participant_confirm_html.tpl
 msgid "Self service cancel transfer"
@@ -3991,12 +3991,12 @@ msgstr ""
 
 #: xml/templates/message_templates/participant_transferred_html.tpl
 msgid "Your Event Registration has been Transferred to %1."
-msgstr ""
+msgstr "Vaša registracija za događaj je transferovana na %1."
 
 #: xml/templates/message_templates/participant_transferred_subject.tpl
 msgid "Event Registration Transferred for %1"
-msgstr ""
+msgstr "Registracija za događaj je transferovana za %1"
 
 #: xml/templates/message_templates/participant_transferred_text.tpl
 msgid "Your Event Registration has been transferred to %1."
-msgstr ""
+msgstr "Vaša registracija za događaj je transferovana na %1."
