--- a/po/es_ES/common-base.po
+++ b/po/es_ES/common-base.po
@@ -6,7 +6,7 @@
 # Adrian Torralba Roman <adriantorralba@hotmail.com>, 2016
 # ixiam <info@ixiam.com>, 2013
 # Fernando <badeaselche@hotmail.com>, 2012
-# Carlos Capote <carloscapote@masticable.org>, 2012-2014
+# Carlos Capote <carloscapote@masticable.org>, 2012-2014,2016
 # carmyman <manuel.rubio.p@gmail.com>, 2012
 # Carolina Gomez <cgomez@ndi.org>, 2015
 # Cristian Schalper <crschalper@gmail.com>, 2015
@@ -42,8 +42,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-23 13:09+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-12-19 14:26+0000\n"
+"Last-Translator: Carlos Capote <carloscapote@masticable.org>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -21500,7 +21500,7 @@ msgstr "Rango de códigos postales"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Date Added to CiviCRM"
-msgstr "Fecha agregada a CiviCRM"
+msgstr "Fecha de creación en CiviCRM"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Custom Group Multiple Values Listing"
