--- a/po/sr_RS@latin/pledge.po
+++ b/po/sr_RS@latin/pledge.po
@@ -3,12 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Đorđe Kolaković <djordje@catalystbalkans.org>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-12-19 11:15+0000\n"
+"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -77,15 +78,15 @@ msgstr ""
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Financial Type - %1"
-msgstr ""
+msgstr "Finansijski tip - %1"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Financial Page - %1"
-msgstr ""
+msgstr "Finansijska stranica - %1"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Contact ID %1 %2"
-msgstr ""
+msgstr "Kontakt ID %1 %2"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test?"
@@ -158,7 +159,7 @@ msgstr ""
 
 #: CRM/Pledge/DAO/PledgePayment.php CRM/Pledge/Form/Payment.php
 msgid "Scheduled Amount"
-msgstr ""
+msgstr "Zakazani iznos"
 
 #: CRM/Pledge/DAO/PledgePayment.php
 msgid "Actual Amount"
@@ -166,11 +167,11 @@ msgstr ""
 
 #: CRM/Pledge/DAO/PledgePayment.php templates/CRM/Pledge/Page/Payment.tpl
 msgid "Last Reminder"
-msgstr ""
+msgstr "Poslednji podsetnik"
 
 #: CRM/Pledge/DAO/PledgePayment.php templates/CRM/Pledge/Page/Payment.tpl
 msgid "Reminders Sent"
-msgstr ""
+msgstr "Podsetnici poslati"
 
 #: CRM/Pledge/Form/Payment.php
 msgid "Edit Scheduled Pledge Payment"
@@ -210,7 +211,7 @@ msgstr ""
 
 #: CRM/Pledge/Form/Pledge.php
 msgid "each"
-msgstr ""
+msgstr "svaki"
 
 #: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Payments Start"
@@ -597,15 +598,15 @@ msgstr ""
 
 #: templates/CRM/Pledge/Page/Payment.tpl
 msgid "Credit Card Payment"
-msgstr ""
+msgstr "Plaćanje kreditnom karticom"
 
 #: templates/CRM/Pledge/Page/Payment.tpl
 msgid "Edit Scheduled Payment"
-msgstr ""
+msgstr "Uredi zakazanu uplatu"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid "Payment Reminders"
-msgstr ""
+msgstr "Podsetnici za plaćanje"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
@@ -658,7 +659,7 @@ msgstr ""
 
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Payments"
-msgstr ""
+msgstr "Plaćanja"
 
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "There are no Pledges for your record."
@@ -674,7 +675,7 @@ msgstr ""
 
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Create date"
-msgstr ""
+msgstr "Datum kreiranja"
 
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Acknowledgment Sent"
@@ -722,12 +723,12 @@ msgstr ""
 #: xml/templates/message_templates/pledge_acknowledge_html.tpl
 #: xml/templates/message_templates/pledge_acknowledge_text.tpl
 msgid "Payment %1"
-msgstr ""
+msgstr "Plaćanje %1"
 
 #: xml/templates/message_templates/pledge_acknowledge_html.tpl
 #: xml/templates/message_templates/pledge_acknowledge_text.tpl
 msgid "paid"
-msgstr ""
+msgstr "plaćeno"
 
 #: xml/templates/message_templates/pledge_acknowledge_html.tpl
 #: xml/templates/message_templates/pledge_acknowledge_text.tpl
