po: update po/sr_RS@latin/financial.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/financial.po
+++ b/po/sr_RS@latin/financial.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-31 15:43+0000\n"
+"PO-Revision-Date: 2016-12-19 10:53+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -57,7 +57,7 @@ msgstr ""
 
 #: CRM/Financial/BAO/FinancialType.php
 msgid "The following tables have an entry for this financial type: %1"
-msgstr ""
+msgstr "Sledeće tabele imaju unos za ovaj finansijski tip: %1"
 
 #: CRM/Financial/BAO/FinancialTypeAccount.php
 msgid ""
@@ -103,7 +103,7 @@ msgstr "Simbol"
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Numeric Code"
-msgstr ""
+msgstr "Numerička šifra"
 
 #: CRM/Financial/DAO/EntityFinancialTrxn.php
 msgid "Entity Financial Transaction ID"
@@ -115,11 +115,11 @@ msgstr "ID finansijske transakcije"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account ID"
-msgstr ""
+msgstr "ID finansijskog računa"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account Name"
-msgstr ""
+msgstr "Ime finansijskog računa"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 #: CRM/Financial/Form/FinancialAccount.php
@@ -134,7 +134,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account Description"
-msgstr ""
+msgstr "Opis finansijskog računa"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account Parent"
@@ -368,11 +368,11 @@ msgstr ""
 
 #: CRM/Financial/Form/BatchTransaction.php
 msgid "Entered Total"
-msgstr ""
+msgstr "Unešeno ukupno"
 
 #: CRM/Financial/Form/BatchTransaction.php
 msgid "Assigned Total"
-msgstr ""
+msgstr "Dodeljeno ukupno"
 
 #: CRM/Financial/Form/BatchTransaction.php
 msgid "Close & Export Batch"
@@ -527,7 +527,7 @@ msgstr ""
 #: CRM/Financial/Form/FinancialTypeAccount.php
 #: templates/CRM/Financial/Page/FinancialType.tpl
 msgid "Financial Accounts"
-msgstr ""
+msgstr "Finansijski računi"
 
 #: CRM/Financial/Form/FinancialTypeAccount.php
 msgid ""
@@ -537,11 +537,11 @@ msgstr ""
 
 #: CRM/Financial/Form/FinancialTypeAccount.php
 msgid "Financial Type Accounts"
-msgstr ""
+msgstr "Računi finansijskog tipa"
 
 #: CRM/Financial/Form/FinancialTypeAccount.php
 msgid "Financial Type Account"
-msgstr ""
+msgstr "Račun finansijskog tipa"
 
 #: CRM/Financial/Form/FinancialTypeAccount.php
 msgid "Financial Account Relationship"
@@ -600,42 +600,42 @@ msgstr ""
 #: CRM/Financial/Page/FinancialType.php
 #: templates/CRM/Financial/Page/FinancialTypeAccount.tpl
 msgid "Edit Financial Type"
-msgstr ""
+msgstr "Uredi finansijski tip"
 
 #: CRM/Financial/Page/FinancialAccount.php
 #: CRM/Financial/Page/FinancialType.php
 msgid "Disable Financial Type"
-msgstr ""
+msgstr "Isključi finansijski tip"
 
 #: CRM/Financial/Page/FinancialAccount.php
 #: CRM/Financial/Page/FinancialType.php
 msgid "Enable Financial Type"
-msgstr ""
+msgstr "Uključi finansijski tip"
 
 #: CRM/Financial/Page/FinancialAccount.php
 #: CRM/Financial/Page/FinancialType.php
 msgid "Delete Financial Type"
-msgstr ""
+msgstr "Obriši finansijski tip"
 
 #: CRM/Financial/Page/FinancialType.php
 msgid "Accounts"
-msgstr ""
+msgstr "Računi"
 
 #: CRM/Financial/Page/FinancialTypeAccount.php
 msgid "Edit Financial Type Account"
-msgstr ""
+msgstr "Uredi račun finansijskog tipa"
 
 #: CRM/Financial/Page/FinancialTypeAccount.php
 msgid "Delete Financial Type Account"
-msgstr ""
+msgstr "Obriši račun finansijskog tipa"
 
 #: CRM/Financial/Page/FinancialTypeAccount.php
 msgid "Assigned Financial Accounts"
-msgstr ""
+msgstr "Dodeljeni finansijski računi"
 
 #: CRM/Financial/Page/FinancialTypeAccount.php
 msgid "Financial Account Types"
-msgstr ""
+msgstr "Tipovi finansijskih računa"
 
 #: templates/CRM/Financial/Form/BatchTransaction.tpl
 #: templates/CRM/Financial/Page/BatchTransaction.tpl
@@ -660,7 +660,7 @@ msgstr ""
 #: templates/CRM/Financial/Form/FinancialBatch.tpl
 #: templates/CRM/Financial/Form/FinancialType.tpl
 msgid "Deleting a financial type cannot be undone."
-msgstr ""
+msgstr "Brisanje finansijskog tipa je nepovratna operacija."
 
 #: templates/CRM/Financial/Form/FinancialAccount.tpl
 msgid "Use this field to indicate the organization that owns this account."
@@ -723,7 +723,7 @@ msgstr ""
 
 #: templates/CRM/Financial/Form/FinancialType.tpl
 msgid "View or Edit Financial Accounts"
-msgstr ""
+msgstr "Vidi ili uredi finansijske račune"
 
 #: templates/CRM/Financial/Form/FinancialTypeAccount.tpl
 msgid ""
@@ -737,7 +737,7 @@ msgstr ""
 
 #: templates/CRM/Financial/Form/Search.tpl
 msgid "Filter Results"
-msgstr ""
+msgstr "Filter rezultata"
 
 #: templates/CRM/Financial/Form/Search.tpl
 msgid "No Accounting Batches match your search criteria."
@@ -773,7 +773,7 @@ msgstr "Format:"
 
 #: templates/CRM/Financial/Form/Search.tpl
 msgid "mismatch."
-msgstr ""
+msgstr "neslaganje."
 
 #: templates/CRM/Financial/Form/Search.tpl
 #: templates/CRM/Financial/Page/BatchTransaction.tpl
@@ -795,15 +795,15 @@ msgstr "Došlo je do greške pri procesovanju vašeg zahteva."
 
 #: templates/CRM/Financial/Form/Search.tpl
 msgid "This record already has the status"
-msgstr ""
+msgstr "Ovaj zapis već ima status"
 
 #: templates/CRM/Financial/Form/Search.tpl
 msgid "The following records already have the status"
-msgstr ""
+msgstr "Sledeći zapisi već imaju status"
 
 #: templates/CRM/Financial/Form/Search.tpl
 msgid "Cannot"
-msgstr ""
+msgstr "Nemoguće"
 
 #: templates/CRM/Financial/Form/Search.tpl
 #: templates/CRM/Financial/Page/BatchTransaction.tpl
@@ -851,11 +851,11 @@ msgstr ""
 
 #: templates/CRM/Financial/Page/FinancialAccount.tpl
 msgid "Add Financial Account"
-msgstr ""
+msgstr "Dodaj finansijski račun"
 
 #: templates/CRM/Financial/Page/FinancialAccount.tpl
 msgid "Account Type"
-msgstr ""
+msgstr "Tip računa"
 
 #: templates/CRM/Financial/Page/FinancialAccount.tpl
 msgid ""
@@ -920,11 +920,11 @@ msgstr ""
 
 #: templates/CRM/Financial/Page/FinancialTypeAccount.tpl
 msgid "Assign Account"
-msgstr ""
+msgstr "Dodeli račun"
 
 #: templates/CRM/Financial/Page/FinancialTypeAccount.tpl
 msgid "Account Type (Code)"
-msgstr ""
+msgstr "Tip računa (šifra)"
 
 #: templates/CRM/Financial/Page/FinancialTypeAccount.tpl
 msgid "Owned By"
