po: update po/sr_RS@latin/pcp.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/pcp.po
+++ b/po/sr_RS@latin/pcp.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-22 13:42+0000\n"
+"PO-Revision-Date: 2016-12-19 12:19+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -147,7 +147,7 @@ msgstr ""
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Email Sent"
-msgstr ""
+msgstr "Email poslat"
 
 #: CRM/PCP/BAO/PCP.php
 msgid ""
@@ -344,23 +344,23 @@ msgstr ""
 
 #: CRM/PCP/Form/PCP.php
 msgid "Page Deleted"
-msgstr ""
+msgstr "Stranica obrisana"
 
 #: CRM/PCP/Form/PCP.php
 msgid "The Campaign Page '%1' has been disabled."
-msgstr ""
+msgstr "Stranica kampanje '%1' je isključena."
 
 #: CRM/PCP/Form/PCP.php
 msgid "Page Disabled"
-msgstr ""
+msgstr "Stranica isključena"
 
 #: CRM/PCP/Form/PCP.php
 msgid "The Campaign Page '%1' has been enabled."
-msgstr ""
+msgstr "Stranica kampanje '%1' je uključena."
 
 #: CRM/PCP/Form/PCP.php
 msgid "Page Enabled"
-msgstr ""
+msgstr "Stranica uključena"
 
 #: CRM/PCP/Form/PCP.php
 msgid "Source Type"
@@ -389,31 +389,31 @@ msgstr ""
 
 #: CRM/PCP/Page/PCP.php
 msgid "Edit Personal Campaign Page"
-msgstr ""
+msgstr "Uredi stranicu lične kampanje"
 
 #: CRM/PCP/Page/PCP.php
 msgid "Approve"
-msgstr ""
+msgstr "Odobri"
 
 #: CRM/PCP/Page/PCP.php
 msgid "Approve Personal Campaign Page"
-msgstr ""
+msgstr "Odobri stranicu lične kampanje"
 
 #: CRM/PCP/Page/PCP.php
 msgid "Reject"
-msgstr ""
+msgstr "Odbij"
 
 #: CRM/PCP/Page/PCP.php
 msgid "Reject Personal Campaign Page"
-msgstr ""
+msgstr "Odbij stranicu lične kampanje"
 
 #: CRM/PCP/Page/PCP.php
 msgid "Delete Personal Campaign Page"
-msgstr ""
+msgstr "Obriši stranicu lične kampanje"
 
 #: CRM/PCP/Page/PCP.php
 msgid "Search Campaign Pages"
-msgstr ""
+msgstr "Pretraži stranice kampanja"
 
 #: CRM/PCP/Page/PCPInfo.php
 msgid "The personal campaign page you requested is currently unavailable."
@@ -445,19 +445,19 @@ msgstr ""
 
 #: CRM/PCP/Page/PCPInfo.php
 msgid "Update your personal contact information"
-msgstr ""
+msgstr "Ažurirajte vaše kontakt informacije"
 
 #: CRM/PCP/Page/PCPInfo.php
 msgid "De-activate the page (you can re-activate it later)"
-msgstr ""
+msgstr "Deaktivirajte ovu stranicu (možete je reaktivirati kasnije)"
 
 #: CRM/PCP/Page/PCPInfo.php
 msgid "Activate the page (you can de-activate it later)"
-msgstr ""
+msgstr "Reaktivirajte ovu stranicu (možete je deaktivirati kasnije)"
 
 #: CRM/PCP/Page/PCPInfo.php
 msgid "Remove the page (this cannot be undone!)"
-msgstr ""
+msgstr "Uklonite ovu stranicu (ova akcija je nepovratna)"
 
 #: CRM/PCP/Page/PCPInfo.php
 msgid "Contribute Now"
@@ -504,7 +504,7 @@ msgstr ""
 
 #: templates/CRM/PCP/Form/Contribute.hlp templates/CRM/PCP/Form/Event.hlp
 msgid "Email Notification"
-msgstr ""
+msgstr "Email notifikacija"
 
 #: templates/CRM/PCP/Form/Contribute.hlp templates/CRM/PCP/Form/Event.hlp
 msgid ""
@@ -659,7 +659,7 @@ msgstr ""
 
 #: templates/CRM/PCP/Page/PCPInfo.tpl
 msgid "The current status of your page is"
-msgstr ""
+msgstr "Trenutni status vaše stranice je"
 
 #: templates/CRM/PCP/Page/PCPInfo.tpl
 msgid ""
@@ -669,15 +669,15 @@ msgstr ""
 
 #: templates/CRM/PCP/Page/PCPInfo.tpl
 msgid "People can register for this event starting on "
-msgstr ""
+msgstr "Ljudi se mogu registrovati za ovaj događaj počevši od "
 
 #: templates/CRM/PCP/Page/PCPInfo.tpl
 msgid "This campaign is active from"
-msgstr ""
+msgstr "Ova kampanja je aktivna od"
 
 #: templates/CRM/PCP/Page/PCPInfo.tpl
 msgid "You can"
-msgstr ""
+msgstr "Možete"
 
 #: templates/CRM/PCP/Page/PCPInfo.tpl
 msgid ""
@@ -688,11 +688,11 @@ msgstr ""
 
 #: templates/CRM/PCP/Page/PCPInfo.tpl
 msgid "Goal"
-msgstr ""
+msgstr "Cilj"
 
 #: templates/CRM/PCP/Page/PCPInfo.tpl
 msgid "raised"
-msgstr ""
+msgstr "prikupljeno"
 
 #: templates/CRM/PCP/Page/PCPInfo.tpl
 msgid "HONOR ROLL"
@@ -771,7 +771,7 @@ msgstr ""
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
 msgid "Your Personal Campaign Page"
-msgstr ""
+msgstr "Vaša stranica lične kampanje"
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
@@ -788,7 +788,7 @@ msgstr ""
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_supporter_notify_html.tpl
 msgid "Login to your account"
-msgstr ""
+msgstr "Prijavite se u vaš nalog"
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_supporter_notify_html.tpl
@@ -815,7 +815,7 @@ msgstr ""
 #: xml/templates/message_templates/pcp_supporter_notify_html.tpl
 #: xml/templates/message_templates/pcp_supporter_notify_text.tpl
 msgid "Questions? Send email to"
-msgstr ""
+msgstr "Pitanja? Pošaljite email"
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
@@ -828,22 +828,22 @@ msgstr ""
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
 msgid "Please contact our site administrator for more information"
-msgstr ""
+msgstr "Kontaktirajte administratora sajta za više informacija"
 
 #: xml/templates/message_templates/pcp_status_change_subject.tpl
 #: xml/templates/message_templates/pcp_supporter_notify_subject.tpl
 msgid "Your Personal Campaign Page for %1"
-msgstr ""
+msgstr "Vaša stranica lične kampanje za %1"
 
 #: xml/templates/message_templates/pcp_status_change_text.tpl
 #: xml/templates/message_templates/pcp_supporter_notify_text.tpl
 msgid "Login to your account at"
-msgstr ""
+msgstr "Prijavite se u vaš nalog "
 
 #: xml/templates/message_templates/pcp_status_change_text.tpl
 #: xml/templates/message_templates/pcp_supporter_notify_text.tpl
 msgid "Click or paste this link into your browser to go to your page"
-msgstr ""
+msgstr "Kliknite na ovaj link, ili ga prekopirajte u pretraživač da biste pristupili vašoj stranici "
 
 #: xml/templates/message_templates/pcp_supporter_notify_html.tpl
 #: xml/templates/message_templates/pcp_supporter_notify_text.tpl
