po: update po/sr_RS@latin/case.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/case.po
+++ b/po/sr_RS@latin/case.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-09 13:43+0000\n"
+"PO-Revision-Date: 2016-12-19 10:36+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -29,7 +29,7 @@ msgstr ""
 
 #: CRM/Case/BAO/Case.php
 msgid "(multiple)"
-msgstr ""
+msgstr "(više)"
 
 #: CRM/Case/BAO/Case.php
 msgid "Move To Case"
@@ -62,7 +62,7 @@ msgstr "Vidi predmet"
 
 #: CRM/Case/BAO/Case.php
 msgid "Case %1 reassigned client from %2 to %3. New Case ID is %4."
-msgstr ""
+msgstr "Predmet %1 - klijent je ponovo dodeljen sa %2 na %3. Novi ID predmeta je %4."
 
 #: CRM/Case/BAO/Case.php
 msgid ""
@@ -263,7 +263,7 @@ msgstr "Da li želite da <a %1>uredite postojeću aktivnost</a>?"
 
 #: CRM/Case/Form/Activity.php CRM/Case/XMLProcessor/Report.php
 msgid "Reported By"
-msgstr ""
+msgstr "Izvestio/la"
 
 #: CRM/Case/Form/Activity.php CRM/Case/XMLProcessor/Report.php
 msgid "Medium"
@@ -449,7 +449,7 @@ msgstr "Štampa liste predmeta"
 
 #: CRM/Case/Form/Task/Restore.php CRM/Case/Task.php
 msgid "Restore Cases"
-msgstr ""
+msgstr "Povrati predmet"
 
 #: CRM/Case/Form/Task/Restore.php
 msgid "%count case restored from trash."
@@ -531,7 +531,7 @@ msgstr ""
 
 #: CRM/Case/Selector/Search.php templates/CRM/Case/Page/DashboardSelector.tpl
 msgid "Next Sched."
-msgstr ""
+msgstr "Sledeći zakazani"
 
 #: CRM/Case/Selector/Search.php
 msgid "Case Search"
@@ -612,7 +612,7 @@ msgstr ""
 
 #: ang/crmCaseType/activityTypesTable.html
 msgid "Add activity type"
-msgstr ""
+msgstr "Dodaj tip aktivnosti"
 
 #: ang/crmCaseType/caseTypeDetails.html
 msgid "WARNING: The case type name includes deprecated characters."
@@ -860,7 +860,7 @@ msgstr ""
 
 #: templates/CRM/Case/Form/CaseView.js
 msgid "Add the %1 set of scheduled activities to this case?"
-msgstr ""
+msgstr "Dodaj %1 set zakazanih aktivnosti ovom predmetu?"
 
 #: templates/CRM/Case/Form/CaseView.js
 msgid "Please select a value"
@@ -1077,7 +1077,7 @@ msgstr "Uključi <a href='%1'>tipove predmeta</a>."
 
 #: templates/CRM/Case/Page/Tab.tpl
 msgid "This page lists all case records for %1."
-msgstr ""
+msgstr "Ova strana lista sve zapise o predmetu za %1."
 
 #: templates/CRM/Case/Page/Tab.tpl
 msgid "Click <a %1>Add Case</a> to add a case record for this contact."
@@ -1135,7 +1135,7 @@ msgstr "Eksport predmeta"
 
 #: CRM/Case/Task.php
 msgid "Restore cases"
-msgstr ""
+msgstr "Povrati predmete"
 
 #: CRM/Case/Task.php
 msgid "Print/merge Document"
@@ -1179,7 +1179,7 @@ msgstr "Tipovi predmeta"
 
 #: templates/CRM/Case/Form/ActivityTab.tpl
 msgid "Reporter"
-msgstr ""
+msgstr "Reporter"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Export Document"
