po: update po/pt_BR/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_BR/common-base.po
+++ b/po/pt_BR/common-base.po
@@ -32,7 +32,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-14 05:52+0000\n"
+"PO-Revision-Date: 2016-12-20 04:38+0000\n"
 "Last-Translator: Diego Viegas <diego.viegas@dotpro.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -9269,7 +9269,7 @@ msgstr ""
 
 #: CRM/Core/Permission.php
 msgid "edit message templates"
-msgstr ""
+msgstr "editar modelos de mensagem"
 
 #: CRM/Core/Permission.php
 msgid "view my invoices"
